--- a/KosaESS/src/main/resources/templates/student/main.html
+++ b/KosaESS/src/main/resources/templates/student/main.html
@@ -204,9 +204,9 @@
 			</div> -->
 
 			<div class="news con" style="background: #E7EFF3; width: 43%;">
-				<h2 style="margin-bottom: 0;">협회 뉴스</h2>
+				<h2 style="margin-bottom: 0;">협회 관련 뉴스</h2>
 				<div style="display: block; text-align: end;">
-					<a class="plus" th:href="@{/student/class/list}">+</a>
+					<a class="plus" th:href="@{https://search.naver.com/search.naver?where=news&sm=tab_jum&query=KOSA}" target='_blank'>+</a>
 				</div>
 				<hr>
 			</div>
