--- a/KosaESS/src/main/resources/templates/student/mypage.html
+++ b/KosaESS/src/main/resources/templates/student/mypage.html
@@ -413,7 +413,7 @@
 
 							<div class="modalFooter">
 								<button type="reset" class="closeBtn">취소</button>
-								<button type="button" class="submitBtn">제출</button>
+								<button type="submit" class="submitBtn">제출</button>
 							</div>
 						</div>
 					</div>
