--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -20,7 +20,7 @@
 				</i> <span class="links_name">메인</span>
 			</a> <span class="tooltip">메인</span></li>
 			<li><a class="icon_img"
-				th:href="@{/__${session.role}__/notice/list}"> <i
+				th:href="@{/__${session.role}__/notice/list/1}"> <i
 					class='bx bx-user'><img th:src="@{/img/notice_white.png}"></i>
 					<span class="links_name">공지사항 관리</span>
 			</a> <span class="tooltip">공지사항 관리</span></li>
