--- a/KosaESS/src/main/resources/templates/admin/insert_detail_code_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/insert_detail_code_popup.html
@@ -30,8 +30,8 @@
 			</tr>
 			<tr class="input_wrap">
 				<th><span class="title">우선순위<span class="red">*</span></span></th>
-				<td><input type="number" min="0" onkeyup="if(window.event.keyCode==13){insertGroupCode();}"
-				class="group_code_cmcd_order" placeholder="우선순위"></td>
+				<td><input type="number" min="0" max="99" value="0" onkeyup="if(window.event.keyCode==13){insertGroupCode();}"
+				class="group_code_cmcd_order" placeholder="0 ~ 99"></td>
 			</tr>
 		</table>
 	</div>
