--- a/KosaESS/src/main/resources/static/css/admin/class_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/class_list.css
@@ -207,3 +207,40 @@
 #excel_btn>img {
 	margin-right: 5px;
 }
+
+.pagination {
+	list-style: none;
+}
+
+.pagination li {
+	color: black;
+	float: left;
+	padding: 8px 16px;
+	text-decoration: none;
+}
+
+.pagination li a{
+	color: black;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.pagination li.active {
+	background-color: #0E5881;
+	color: white;
+	border-radius: 5px;
+}
+
+.pagination li.active a{
+	color:white;
+}
+
+.pagination li:hover:not(.active) {
+	background-color: #ddd;
+	border-radius: 5px;
+}
+
+nav {
+	display: flex;
+	justify-content: space-around;
+}
