--- a/KosaESS/src/main/resources/templates/admin/inquiry_list.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_list.html
@@ -79,7 +79,7 @@
 			<div class="content_info_wrap">
 				<div class="content_info">
 					<span>총 <span class="inquiry_list_cnt"
-						th:text="${#lists.size(inquiryList)}"></span> 건
+						th:text="${inquiryCnt}"></span> 건
 					</span>
 				</div>
 				<div class="content_info_btn_wrap">
@@ -118,7 +118,7 @@
 							<td class="inquiry_check"><input class="input_check"
 								type="checkbox" name="select" onclick="checkSelectAll()"
 								th:value="${inquiry.postId}"></td>
-							<td class="inquiry_num" th:text="${#lists.size(inquiryList)-iterStat.index}"></td>
+							<td class="inquiry_num" th:text="${inquiry.rowNum}"></td>
 							<td><a class="inquiry_title"
 								th:href="@{/admin/inquiry/view/__${inquiry.postId}__}"
 								th:text="${inquiry.postTitle}"></a></td>
@@ -139,6 +139,24 @@
 			<!-- 컨텐츠 리스트 부분 -->
 		</div>
 		<!-- Content Bottom-->
+		
+		<!-- Paging -->
+		<nav class="page_nav" aria-label="Page navigation">
+			<ul class="pagination">
+				<li th:if="${nowPageBlock>1}"><a
+					th:href="@{/admin/inquiry/list/__${startPage-1}__}"
+					aria-label="Previous">이전</a></li>
+
+				<li th:each="i: ${#numbers.sequence(startPage, endPage)}"
+					th:classappend="${i==nowPage}?active"><a
+					th:href="@{/admin/inquiry/list/__${i}__}">[[${i}]]</a></li>
+
+				<li th:if="${nowPageBlock<totalPageBlock}"><a
+					th:href="@{/admin/inquiry/list/__${endPage+1}__}"
+					aria-label="Next">다음</a></li>
+			</ul>
+		</nav>
+		<!-- Paging -->
 	</div>
 	<script>
 	//전체선택
