--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -25,18 +25,18 @@
 					<span class="links_name">공지사항 관리</span>
 			</a> <span class="tooltip">공지사항 관리</span></li>
 			<li><a class="icon_img"
-				th:href="@{/__${session.role}__/inquiry/list}"> <i
+				th:href="@{/__${session.role}__/inquiry/list/1}"> <i
 					class='bx bx-chat'><img th:src="@{/img/inquiry_white.png}"></i>
 					<span class="links_name">문의사항 관리</span>
 			</a> <span class="tooltip">문의사항 관리</span></li>
 			<li><a class="icon_img"
-				th:href="@{/__${session.role}__/manager/list}"> <i
+				th:href="@{/__${session.role}__/manager/list/1}"> <i
 					class='bx bx-pie-chart-alt-2'><img
 						th:src="@{/img/manager_white.png}"></i> <span class="links_name">업무
 						담당자 관리</span>
 			</a> <span class="tooltip">업무 담당자 관리</span></li>
 			<li><a class="icon_img"
-				th:href="@{/__${session.role}__/company/list}"> <i
+				th:href="@{/__${session.role}__/company/list/1}"> <i
 					class='bx bx-pie-chart-alt-2'><img
 						th:src="@{/img/company_white.png}"></i> <span class="links_name">기업
 						관리</span>
@@ -47,7 +47,7 @@
 					<span class="links_name">강의 관리</span>
 			</a> <span class="tooltip">강의 관리</span></li>
 			<li><a class="icon_img"
-				th:href="@{/__${session.role}__/class/list}"> <i
+				th:href="@{/__${session.role}__/class/list/1}"> <i
 					class='bx bx-cart-alt'><img th:src="@{/img/class_white.png}"></i>
 					<span class="links_name">교육과정 관리</span>
 			</a> <span class="tooltip">교육과정 관리</span></li>
