--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -52,7 +52,7 @@
 					<span class="links_name">교육과정 관리</span>
 			</a> <span class="tooltip">교육과정 관리</span></li>
 			<li><a class="icon_img"
-				th:href="@{/__${session.role}__/student/list}"> <i
+				th:href="@{/__${session.role}__/student/list/1}"> <i
 					class='bx bx-heart'><img th:src="@{/img/student_white.png}"></i>
 					<span class="links_name">교육생 관리</span>
 			</a> <span class="tooltip">교육생 관리</span></li>
@@ -62,7 +62,7 @@
 					<span class="links_name">지원금 관리</span> 
 			</a> <span class="tooltip">지원금 관리</span></li>
 			<li><a class="icon_img"
-				th:href="@{/__${session.role}__/commoncode/list}"> <i
+				th:href="@{/__${session.role}__/commoncode/list/1}"> <i
 					class='bx bx-folder'><img th:src="@{/img/commoncode_white.png}"></i>
 					<span class="links_name">기준 정보 관리</span>
 			</a> <span class="tooltip">기준 정보 관리</span></li>
