--- a/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
+++ b/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
@@ -40,17 +40,17 @@
 						</select>
 						<select id="select_class">
 							<option value="" disabled selected>교육과정명을 선택하세요</option>
-							<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
+							<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class.clssId}" th:name="${class.clssSubsidy}"/>
 						</select>
 					</div>
 					<div class="insert_name">
 						지급 기준 연월<span class="star">*</span>
 					</div>
 					<div class="insert_input">
-						<select id="start_date_y">
+						<select id="select_ym_y">
 							<option th:each="yNum:${#numbers.sequence(__${#calendars.format(#calendars.createNow(), 'yyyy')}__,1980)}" th:text="${yNum}" th:value="${yNum}"/>
 						</select>
-						<select id="start_date_m">
+						<select id="select_ym_m">
 							<option th:each="monthNum:${#numbers.sequence(1,12)}" th:text="${monthNum}" th:value="${monthNum}"/>
 						</select>
 					</div>
@@ -62,8 +62,8 @@
 						<input type="button" class="batch_input" value="일괄적용" onclick="batchInput(this)">
 					</div>
 					<div class="insert_name">지원금</div>
-					<div class="insert_input"><span id="subsidy_value">10000</span><span>&nbsp;&#8361;</span></div>
-					<input type="button" class="batch_input" value="일괄적용" onclick="batchInput(this)">
+					<div class="insert_input"><span id="subsidy_value">0</span><span>&nbsp;&#8361;</span></div>
+<!-- 					<input type="button" class="batch_input" value="일괄적용" onclick="batchInput(this)"> -->
 				</div>
 				<!-- 검색 버튼 -->
 				<div class="insert_btn_wrap">
@@ -96,8 +96,7 @@
 						<th th:each="wlogCodeName:${wlogCodeNameList}" th:text="${wlogCodeName.cmcdNm}"></th>
 						<th>출석일수</th>
 						<th>출석률(%)</th>
-						<th>지급예정액</th>
-						<th>지급일</th>
+						<th>지급예정액(&#8361;)</th>
 						<th>지급상태</th>
 					</tr>
 				</thead>
@@ -113,7 +112,6 @@
 						<td class="number_cell" th:text="${subsidy.wlogCnt}">출석일수</td>
 						<td class="number_cell">출석률</td>
 						<td class="fixed_length_cell">지급예정액</td>
-						<td class="fixed_length_cell" th:text="${subsidy.paidDd}">지급일</td>
 						<td class="fixed_length_cell" th:text="${subsidy.sbsdNm}" th:value="${subsidy.sbsdCd}">지급상태</td>
 					</tr>
 				</tbody>
