--- a/KosaESS/src/main/resources/templates/student/mypage.html
+++ b/KosaESS/src/main/resources/templates/student/mypage.html
@@ -172,6 +172,9 @@
 									<th>교육과정명</th>
 									<th>교육기간</th>
 									<th>수강상태</th>
+									<th>교육시간</th>
+									<th>이수시간</th>
+									<th>이수율</th>
 									<th>이수상태</th>
 									<th>이수증</th>
 								</tr>
