--- a/KosaESS/src/main/resources/templates/admin/commoncode_list.html
+++ b/KosaESS/src/main/resources/templates/admin/commoncode_list.html
@@ -1072,6 +1072,7 @@
 		}
 	}
 	
+	//그룹코드 등록하기 버튼
 	function showInsertGroupPopup(){
 		window.open(
 				"/admin/commoncode/insert/groupcode", "insertgroupcode", 
@@ -1080,7 +1081,7 @@
 	}
 	
 	var popup;
-	
+	//상세코드 등록하기 버튼
 	function showInsertDetailPopup(){
 		if(selectedCode === ""){
 			selectedCode = "all";
