--- a/KosaESS/src/main/resources/templates/admin/insert_group_code_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/insert_group_code_popup.html
@@ -58,7 +58,7 @@
 				success : function(response) {
 					if (response == "success") {
 						alert("그룹코드가 생성되었습니다.");
-						opener.location.href="/admin/commoncode/list";
+						opener.location.href="/admin/commoncode/list/1";
 						self.close();//팝업창 닫기
 					} else {
 						alert("코드구분이 중복됩니다. 다시 입력해주세요.");
