--- a/KosaESS/src/main/resources/static/css/admin/manager_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/manager_list.css
@@ -34,7 +34,7 @@
 }
 
 .home-section .content_middle {
-	margin: 40px;
+	margin: 40px 40px 0 40px;
 	display: flex;
 	justify-content: space-between;
 	border-top: 2px solid #0E5881;
@@ -90,7 +90,7 @@
 }
 
 .home-section .content_bottom {
-	margin: 40px;
+	margin: 10px 40px 40px 40px;
 }
 
 .home-section .content_bottom .content_info_wrap {
@@ -128,6 +128,7 @@
 	margin: 2px;
 	padding: 5px;
 	cursor: pointer;
+	align-items: center;
 }
 
 .content_list {
@@ -145,7 +146,7 @@
 }
 
 .content_list_table tr {
-	border-bottom: 1px solid #CFDEE6;
+	border: 1px solid #CFDEE6;
 	height: 30px;
 }
 
@@ -189,7 +190,7 @@
 	text-align:center;
 }
 
-.btn_td{
+.list_btn_wrap{
 	display:flex;
 	justify-content: center;
 }
