--- a/KosaESS/src/main/resources/templates/admin/notice_form.html
+++ b/KosaESS/src/main/resources/templates/admin/notice_form.html
@@ -24,7 +24,7 @@
 			</div>
 			<!-- Route -->
 			<div class="route">
-				<a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/notice/list}">공지사항
+				<a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/notice/list/1}">공지사항
 					관리</a> > <a th:href="@{/admin/notice/__${act}__}">공지사항 <span
 					th:if="${act=='insert'}">등록</span> <span th:if="${act=='select'}">조회</span>
 					<span th:if="${act=='update'}">수정</span>
@@ -35,7 +35,7 @@
 
 		<!-- Content Middle-->
 		<form th:action="@{/admin/notice/__${act}__}" method="post"
-			onsubmit="submitPost();" enctype="multipart/form-data">
+			th:onsubmit="return submitPost([[${act}]]);" enctype="multipart/form-data">
 			<!-- Content Middle-->
 			<div class="content_middle">
 				<table>
@@ -84,24 +84,23 @@
 								th:if="${act=='select'}" th:utext="${postVO.postContent}"></div>
 						</td>
 					</tr>
-					<tr>
+					<tr style="height: 300px;">
 						<th>첨부파일</th>
-						<td><input th:if="${act=='insert'}" type="file" name="files"
-							multiple>
-
-							<div class="file_wrap" th:if="${act=='select'}">
+						<td style="height: 300px; display: flex;">
+							<div th:if="${act=='select'}">
 								<div th:if="${postVO.fileId} == null">첨부파일 없음</div>
-								<div th:each="file: ${fileList}">
+								<div class="file_wrap"  th:each="file: ${fileList}">
 									<img class="file_img" th:src="@{/img/file.png}"> <a
 										th:href="@{/download/file/__${file.fileId}__/__${file.fileSubId}__}"
 										th:text="${file.fileNm}"></a>
 								</div>
 							</div>
 
-							<div th:if="${act=='update'}">
+							<div th:if="${act=='update' or act=='insert'}">
 								<button class="add_file" onclick="addFile(this)" type="button">
 								<img class="add_file_img" th:src="@{/img/plus_navy.png}">
 								파일추가</button>
+								<input type="hidden" class="upload_file_cnt" th:value="${#lists.size(fileList)}">
 								<div>
 									<div th:each="file: ${fileList}" class="file_wrap">
 										<input type="hidden" th:value="${file.fileSubId}">
@@ -122,24 +121,24 @@
 			<div class="content_bottom">
 				<div class="btn_wrap" th:if="${act=='insert'}">
 					<button class="cancel_btn" type="button"
-						onclick="location.href='/admin/notice/list'">취소</button>
-					<button class="insert_btn" type="submit">등록하기</button>
+						onclick="location.href='/admin/notice/list/1'">취소</button>
+					<button class="insert_btn" type="submit">저장</button>
 				</div>
 
 				<div class="btn_wrap" th:if="${act=='select'}">
 					<input class="notice_id" type="hidden" th:value="${postVO.postId}">
-					<button id="delete_btn" class="cancel_btn" type="button">삭제</button>
+					<button id="delete_btn" class="cancel_btn" type="button" onclick="deleteNotice()">삭제</button>
 					<button class="insert_btn" type="button"
 						th:onclick="|location.href='@{/admin/notice/update/__${postVO.postId}__}'|">수정</button>
 					<button class="insert_btn" type="button"
-						onclick="location.href='/admin/notice/list'">목록</button>
+						th:onclick="|location.href='@{/admin/notice/list/__${session.page}__}'|">목록</button>
 				</div>
 
 				<div class="btn_wrap" th:if="${act=='update'}">
 					<input class="notice_id" name="noticeId" type="hidden"
 						th:value="${postVO.postId}">
 					<button class="cancel_btn" type="button"
-						onclick="location.href='/admin/notice/list'">취소</button>
+						th:onclick="|location.href='@{/admin/notice/view/__${postVO.postId}__}'|">취소</button>
 					<button class="insert_btn" type="submit">저장</button>
 				</div>
 			</div>
@@ -151,7 +150,10 @@
 	<script type="text/javascript"
 		th:src="@{/res/smarteditor/js/HuskyEZCreator.js}" charset="utf-8">
 	</script>
-	<script>
+	<script th:inline="javascript">
+	//추가된 파일 개수
+	var fileCnt = Number(document.querySelector(".upload_file_cnt").value);
+	
 		var act = document.querySelector('.title span').textContent;
 		console.log(act);
 		
@@ -173,21 +175,29 @@
 			smartEditor();
 		});
 		
-		function submitPost(){
+		//insert or update 폼 제출시
+		function submitPost(act){
+			console.log(act);
+			
 			oEditors.getById["edit_text"].exec("UPDATE_CONTENTS_FIELD", []);
 			let content = document.getElementById("edit_text").value;
-			if(content == ''){
+			if(content === '<p>&nbsp;</p>'){
 				alert("내용을 입력해주세요.");
 				oEditors.getById["edit_text"].exec("FOCUS");
-				return
+				return false;
 			}else{
 				document.getElementById("edit_text").value = content;
 				console.log(content);
-		
+				
+				if(!confirm("저장하시겠습니까?")){
+					return false;
+				}else{
+					alert("저장되었습니다.");
+				}
 			}
 		}
 		}
-		
+	
 		
 	function noticeStatusChange(select){
 		var selectedValue=select.value;
@@ -200,39 +210,49 @@
 			
 		
 	//삭제하기
-	document.querySelector("#delete_btn").addEventListener("click",function() {
-				var selectedNoticeIds = [];
-				var noticeId = document.querySelector(".notice_id").value;
-				
-				
-				
-				selectedNoticeIds.push(noticeId);
-				console.log(selectedNoticeIds);
-				// Ajax 요청에서 selectedLectureIds를 배열로 전송합니다.
-				$.ajax({
-					url : '/admin/notice/delete',
-					method : 'POST',
-					data : {
-						selectedNoticeIds : selectedNoticeIds
-					},
-					success : function(response) {
-						console.log(response);
-						if (response == "success") {
-							alert("공지가 삭제되었습니다.");
-							window.location.href = "/admin/notice/list";
-						}
+	function deleteNotice(){
+		if(!confirm("삭제하시겠습니까?")){
+			//아니오
+		}else{
+			var selectedNoticeIds = [];
+			var noticeId = document.querySelector(".notice_id").value;
+			
+			selectedNoticeIds.push(noticeId);
+			console.log(selectedNoticeIds);
+			// Ajax 요청에서 selectedLectureIds를 배열로 전송합니다.
+			$.ajax({
+				url : '/admin/notice/delete',
+				method : 'POST',
+				data : {
+					selectedNoticeIds : selectedNoticeIds
+				},
+				success : function(response) {
+					console.log(response);
+					if (response == "success") {
+						alert("공지가 삭제되었습니다.");
+						window.location.href = "/admin/notice/list/1";
 					}
-				});
+				}
 			});
+		}
+	}
+	
+	
 	
 	//update일 때 '파일추가'버튼 클릭하면 파일 추가하기
 	function addFile(button){
-		var divParent = button.closest('div');
-		var inputFile = document.createElement('input');
-		inputFile.type = 'file';
-		inputFile.name = 'files';
-
-		divParent.appendChild(inputFile);
+		console.log(fileCnt);
+		if(fileCnt < 4){
+			var divParent = button.closest('div');
+			var inputFile = document.createElement('input');
+			inputFile.type = 'file';
+			inputFile.name = 'files';
+			divParent.appendChild(inputFile);
+			fileCnt =  fileCnt + 1;
+		}else{
+			alert("파일은 최대 5개까지만 등록 가능합니다.");
+		}
+		
 	}
 	
 	//update일 때 파일 '삭제'버튼 클릭하면 input type="hidden"에 name 추가
@@ -242,6 +262,7 @@
 		inputHidden.name='deleteFiles';
 		console.log(inputHidden.value);
 		divParent.style.display = 'none';
+		fileCnt =  fileCnt - 1;
 	}
 	
 	</script>
