--- a/KosaESS/src/main/resources/templates/admin/notice_list.html
+++ b/KosaESS/src/main/resources/templates/admin/notice_list.html
@@ -21,8 +21,8 @@
 			<div class="title">공지사항 관리</div>
 			<!-- Route -->
 			<div class="route">
-				<a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/notice/list}">공지사항
-					관리</a>
+				<a th:href="@{/admin}">대시보드</a> > <a
+					th:href="@{/admin/notice/list/1}">공지사항 관리</a>
 			</div>
 		</div>
 		<!-- Content Top -->
@@ -77,8 +77,8 @@
 			<!-- 컨텐츠 개수와 버튼 wrap -->
 			<div class="content_info_wrap">
 				<div class="content_info">
-					<span>총 <span class="notice_list_cnt"
-						th:text="${noticeCnt}">noticeListCnt</span> 건
+					<span>총 <span class="notice_list_cnt" th:text="${noticeCnt}">noticeListCnt</span>
+						건
 					</span>
 				</div>
 				<div class="content_info_btn_wrap">
@@ -127,8 +127,7 @@
 							<td class="notice_check"><input class="input_check"
 								type="checkbox" name="select" onclick="checkSelectAll()"
 								th:value="${notice.postId}"></td>
-							<td class="notice_num"
-								th:text="${notice.rowNum}"></td>
+							<td class="notice_num" th:text="${notice.rowNum}"></td>
 							<td><a class="notice_title"
 								th:href="@{/admin/notice/view/__${notice.postId}__}"
 								th:text="${notice.postTitle}"></a></td>
@@ -146,7 +145,7 @@
 			<!-- 컨텐츠 리스트 부분 -->
 		</div>
 		<!-- Content Bottom-->
-		
+
 		<!-- Paging -->
 		<nav class="page_nav" aria-label="Page navigation">
 			<ul class="pagination">
@@ -159,8 +158,7 @@
 					th:href="@{/admin/notice/list/__${i}__}">[[${i}]]</a></li>
 
 				<li th:if="${nowPageBlock<totalPageBlock}"><a
-					th:href="@{/admin/notice/list/__${endPage+1}__}"
-					aria-label="Next">다음</a></li>
+					th:href="@{/admin/notice/list/__${endPage+1}__}" aria-label="Next">다음</a></li>
 			</ul>
 		</nav>
 		<!-- Paging -->
@@ -211,22 +209,25 @@
 			            alert("삭제할 공지사항을 선택해주세요.");
 			            
 			        }else{
-			        	console.log(selectedNoticeIds);
-						// Ajax 요청에서 selectedLectureIds를 배열로 전송합니다.
-						$.ajax({
-							url : '/admin/notice/delete',
-							method : 'POST',
-							data : {
-								selectedNoticeIds : selectedNoticeIds
-							},
-							success : function(response) {
-								console.log(response);
-								if (response == "success") {
-									alert("선택한 공지가 삭제되었습니다.");
-									window.location.href = "/admin/notice/list";
+			        	if(!confirm("삭제하시겠습니까?")){
+			        		
+			        	}else{
+							// Ajax 요청에서 selectedLectureIds를 배열로 전송합니다.
+							$.ajax({
+								url : '/admin/notice/delete',
+								method : 'POST',
+								data : {
+									selectedNoticeIds : selectedNoticeIds
+								},
+								success : function(response) {
+									console.log(response);
+									if (response == "success") {
+										alert("선택한 공지가 삭제되었습니다.");
+										window.location.href = "/admin/notice/list/1";
+									}
 								}
-							}
-						});
+							});
+			        	}
 			        }
 				});
 
@@ -321,7 +322,7 @@
 							//num
 							var tdNum = document.createElement("td");
 							tdNum.className = "notice_num";
-							tdNum.textContent = noticeList.length - i;
+							tdNum.textContent = i+1;
 							tr.appendChild(tdNum);
 
 							//postTitle
